--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/css/bootstrap.min.css">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #e36d62;">
         <div class="container-fluid">
             <a class="navbar-brand" href="/">Nutrition Analysis</a>
             <div class="collapse navbar-collapse">
