--- a/project/templates/recommendations.html
+++ b/project/templates/recommendations.html
@@ -1,6 +1,27 @@
 {% extends "base.html" %}
 {% block content %}
 <h1>Recommendations</h1>
+<div class="row">
+    <div class="col-md-6">
+        <h3>Total Calories Consumed</h3>
+        {{ calories_chart|safe }}
+    </div>
+    <div class="col-md-6">
+        <h3>Total Proteins Consumed</h3>
+        {{ proteins_chart|safe }}
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-md-6">
+        <h3>Total Carbohydrates Consumed</h3>
+        {{ carbs_chart|safe }}
+    </div>
+    <div class="col-md-6">
+        <h3>Total Sugars Consumed</h3>
+        {{ sugars_chart|safe }}
+    </div>
+</div>
 {% for disease, foods in recommendations.items() %}
     <h3>Disease: {{ disease }}</h3>
     {% for nutrient, food_list in foods.items() %}
