--- a/project/templates/recommendations.html
+++ b/project/templates/recommendations.html
@@ -1,24 +1,38 @@
 {% extends "base.html" %}
 {% block content %}
 <h1>Recommendations</h1>
-<div class="row">
-    <div class="col-md-6">
-        <h3>Total Calories Consumed</h3>
+<div class="header-box">
+    <h3>Total Calories Consumed</h3>
+</div>
+<div class="card">
+    <div class="card-body">
         {{ calories_chart|safe }}
     </div>
-    <div class="col-md-6">
-        <h3>Total Proteins Consumed</h3>
+</div>
+
+<div class="header-box">
+    <h3>Total Proteins Consumed</h3>
+</div>
+<div class="card">
+    <div class="card-body">
         {{ proteins_chart|safe }}
     </div>
 </div>
 
-<div class="row">
-    <div class="col-md-6">
-        <h3>Total Carbohydrates Consumed</h3>
+<div class="header-box">
+    <h3>Total Carbohydrates Consumed</h3>
+</div>
+<div class="card">
+    <div class="card-body">
         {{ carbs_chart|safe }}
     </div>
-    <div class="col-md-6">
-        <h3>Total Sugars Consumed</h3>
+</div>
+
+<div class="header-box">
+    <h3>Total Sugars Consumed</h3>
+</div>
+<div class="card">
+    <div class="card-body">
         {{ sugars_chart|safe }}
     </div>
 </div>
